# mesa__rbug-gui

./: .gitignore  Makefile.in  README  autogen.sh  configure.ac  todo.txt
res/: ask.xml  main.xml
src/: ask.c  context.c  draw.c  main.c  program.h  rbug.c  shader.c  texture.c
